--- a/Realtime-Action-Recognition/requirements.txt
+++ b/Realtime-Action-Recognition/requirements.txt
@@ -1,14 +1,14 @@
-Pillow
-cython
-matplotlib
-scikit-image
-opencv-python
-h5py
-imgaug
-pandas
-argparse
+Pillow==10.0.0
+cython==3.0.0
+matplotlib==3.7.2
+scikit-image==0.21.0
+opencv-python==4.8.0.76
+h5py==3.9.0
+imgaug==0.4.0
+pandas==2.0.3
+argparse==1.4.0
 IPython[all]
-simplejson
-sklearn
-slidingwindow
-pyyaml
+simplejson==3.19.1
+scikit-learn==0.21.3
+slidingwindow==0.0.14
+pyyaml==6.0.1
